# fast-utilities

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: clone.rs  is.rs  lib.rs  log.rs
src/is/: is_float.rs  mod.rs
src/math/: builtin.rs  clamp.rs  mod.rs
