[package]
name = "fast-utilities"
version = "0.1.3"
authors = ["Raspberrry1111 <7sansandflowey@gmail.com>"]
edition = "2018"
keywords = ["utilities"]
description = "A fast utility library written in rust"
license = "MIT"
repository = "https://github.com/Raspberry1111/fast-utilities"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.48"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
embed_js = "^0.1.4"

[profile.release]
opt-level = "s"
lto = true